--- a/index.html
+++ b/index.html
@@ -29,60 +29,78 @@
           </div>
         </div>
         <div class="col-md-6 right-side">
-          <div class="d-flex justify-content-between align-items-center mb-4">
-            <h2>Welcome Back</h2>
-          </div>
-          <p class="mb-4 text-white text-decoration-none">
-            You can now login to your account
-          </p>
-          <form class="login-form">
-            <div class="mb-4">
-              <input type="email" class="form-control" placeholder="Email" />
+          <div class="login-view">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+              <h2>Welcome Back</h2>
             </div>
-            <div class="mb-4">
-              <input
-                type="password"
-                class="form-control"
-                placeholder="Password"
-              />
-            </div>
-            <div class="d-flex justify-content-between mb-4">
-              <a href="#" class="text-purple text-decoration-none"
-                >Forgot password?</a
-              >
-            </div>
-            <button type="submit" class="btn btn-login">Sign in</button>
-          </form>
-          <div class="divider">
-            <span class="text-muted">or continue with</span>
-          </div>
-          <div class="row">
-            <div class="col-6">
-              <button class="social-btn">
-                <img
-                  src="https://www.google.com/favicon.ico"
-                  width="20"
-                  height="20"
-                  alt="Google"
+            <p class="mb-4 text-white text-decoration-none">
+              You can now login to your account
+            </p>
+            <form id="loginForm" onsubmit="return handleLogin(event)" class="login-form">
+              <div class="mb-4">
+                <input 
+                  type="email" 
+                  id="email" 
+                  class="form-control" 
+                  placeholder="Email" 
+                  required 
                 />
-                Google
-              </button>
-            </div>
-            <div class="col-6">
-              <button class="social-btn">
-                <img
-                  src="https://www.apple.com/favicon.ico"
-                  width="20"
-                  height="20"
-                  alt="Apple"
+              </div>
+              <div class="mb-4">
+                <input
+                  type="password"
+                  id="password"
+                  class="form-control"
+                  placeholder="Password"
+                  required
                 />
-                Apple
-              </button>
+              </div>
+              <div class="d-flex justify-content-between mb-4">
+                <a href="#" class="text-purple text-decoration-none"
+                  >Forgot password?</a
+                >
+              </div>
+              <button type="submit" class="btn btn-login">Sign in</button>
+            </form>
+            <div class="divider">
+              <span class="text-muted">or continue with</span>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <button class="social-btn">
+                  <img
+                    src="https://www.google.com/favicon.ico"
+                    width="20"
+                    height="20"
+                    alt="Google"
+                  />
+                  Google
+                </button>
+              </div>
+              <div class="col-6">
+                <button class="social-btn">
+                  <img
+                    src="https://www.apple.com/favicon.ico"
+                    width="20"
+                    height="20"
+                    alt="Apple"
+                  />
+                  Apple
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="logged-in-view">
+            <div class="text-center">
+              <h2 class="mb-4">Welcome Back, <span id="userDisplay"></span>!</h2>
+              <p class="mb-4 text-white">You've successfully logged in</p>
+              <button onclick="handleLogout()" class="btn btn-login">Logout</button>
             </div>
           </div>
         </div>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
