--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
@@ -36,7 +37,7 @@
             <p class="mb-4 text-white text-decoration-none">
               You can now login to your account
             </p>
-            <form id="loginForm" onsubmit="return handleLogin(event)" class="login-form">
+            <form id="loginForm" class="login-form">
               <div class="mb-4">
                 <input 
                   type="email" 
@@ -100,24 +101,190 @@
         </div>
       </div>
     </div>
-<div class="theme-toggle">
-  <button id="themeToggle" class="theme-btn">
-    <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-      <circle cx="12" cy="12" r="5"/>
-      <line x1="12" y1="1" x2="12" y2="3"/>
-      <line x1="12" y1="21" x2="12" y2="23"/>
-      <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/>
-      <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/>
-      <line x1="1" y1="12" x2="3" y2="12"/>
-      <line x1="21" y1="12" x2="23" y2="12"/>
-      <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/>
-      <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/>
-    </svg>
-    <svg class="moon-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-      <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
-    </svg>
-  </button>
+<div class="shop-section">
+  <div class="container py-5">
+      <div class="d-flex justify-content-between align-items-center mb-4">
+          <h2 class="text-purple">Welcome to AMU Shop</h2>
+          <div class="d-flex align-items-center gap-3">
+              <button id="themeToggle" class="theme-btn">
+                  <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                      <circle cx="12" cy="12" r="5"/>
+                      <line x1="12" y1="1" x2="12" y2="3"/>
+                      <line x1="12" y1="21" x2="12" y2="23"/>
+                      <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/>
+                      <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/>
+                      <line x1="1" y1="12" x2="3" y2="12"/>
+                      <line x1="21" y1="12" x2="23" y2="12"/>
+                      <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/>
+                      <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/>
+                  </svg>
+                  <svg class="moon-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                      <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
+                  </svg>
+              </button>
+              <button onclick="handleLogout()" class="btn btn-outline-purple">Logout</button>
+              <div class="cart-icon">
+                  <span class="cart-count" id="cartCount">0</span>
+                  <i class="fas fa-shopping-cart"></i>
+              </div>
+          </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-8">
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="https://images.unsplash.com/photo-1516035069371-29a1b244cc32" class="card-img-top" alt="Digital Camera">
+                            <span class="badge bg-purple">SALE!</span>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Digital Camera</h5>
+                            <p class="price">$199.99</p>
+                            <button onclick="addToCart('Digital Camera', 199.99)" class="btn btn-purple w-100">
+                                Add to Cart
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="https://images.unsplash.com/photo-1608571423902-eed4a5ad8108" class="card-img-top" alt="Essential Oils">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Essential Oils</h5>
+                            <p class="price">$29.99</p>
+                            <button onclick="addToCart('Essential Oils', 29.99)" class="btn btn-purple w-100">
+                                Add to Cart
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                  <div class="product-card">
+                      <div class="product-image">
+                          <img src="https://images.unsplash.com/photo-1608571423902-eed4a5ad8108" class="card-img-top" alt="Essential Oils">
+                      </div>
+                      <div class="card-body">
+                          <h5 class="card-title">Essential Oils</h5>
+                          <p class="price">$29.99</p>
+                          <button onclick="addToCart('Essential Oils', 29.99)" class="btn btn-purple w-100">
+                              Add to Cart
+                          </button>
+                      </div>
+                  </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="https://images.unsplash.com/photo-1608571423902-eed4a5ad8108" class="card-img-top" alt="Essential Oils">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Essential Oils</h5>
+                        <p class="price">$29.99</p>
+                        <button onclick="addToCart('Essential Oils', 29.99)" class="btn btn-purple w-100">
+                            Add to Cart
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="product-card">
+                  <div class="product-image">
+                      <img src="https://images.unsplash.com/photo-1608571423902-eed4a5ad8108" class="card-img-top" alt="Essential Oils">
+                  </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Essential Oils</h5>
+                      <p class="price">$29.99</p>
+                      <button onclick="addToCart('Essential Oils', 29.99)" class="btn btn-purple w-100">
+                          Add to Cart
+                      </button>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="https://images.unsplash.com/photo-1608571423902-eed4a5ad8108" class="card-img-top" alt="Essential Oils">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Essential Oils</h5>
+                    <p class="price">$29.99</p>
+                    <button onclick="addToCart('Essential Oils', 29.99)" class="btn btn-purple w-100">
+                        Add to Cart
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="product-card">
+              <div class="product-image">
+                  <img src="https://images.unsplash.com/photo-1608571423902-eed4a5ad8108" class="card-img-top" alt="Essential Oils">
+              </div>
+              <div class="card-body">
+                  <h5 class="card-title">Essential Oils</h5>
+                  <p class="price">$29.99</p>
+                  <button onclick="addToCart('Essential Oils', 29.99)" class="btn btn-purple w-100">
+                      Add to Cart
+                  </button>
+              </div>
+          </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="product-card">
+            <div class="product-image">
+                <img src="https://images.unsplash.com/photo-1608571423902-eed4a5ad8108" class="card-img-top" alt="Essential Oils">
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Essential Oils</h5>
+                <p class="price">$29.99</p>
+                <button onclick="addToCart('Essential Oils', 29.99)" class="btn btn-purple w-100">
+                    Add to Cart
+                </button>
+            </div>
+        </div>
+    </div>
+
+              
+            <div class="col-lg-4">
+              <div class="cart-sidebar">
+                  <div class="card">
+                      <div class="card-header bg-purple text-white">
+                          <h5 class="mb-0">Shopping Cart</h5>
+                      </div>
+                      <div class="card-body">
+                          <div id="cartItems" class="cart-items">
+                          </div>
+                          <hr>
+                          <div class="d-flex justify-content-between align-items-center">
+                              <h5>Total:</h5>
+                              <h5 id="cartTotal">$0.00</h5>
+                          </div>
+                          <button onclick="clearCart()" class="btn btn-danger w-100 mt-3">
+                              Clear Cart
+                          </button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
 </div>
+            </div>
+        </div>
+
+  </div>
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
   </body>
